--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/main/webapp/WEB-INF/views/board/modify.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/board/read.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/board/write.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/left_navi.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/include/plugin_js.jsp=UTF-8
