--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//src/main/webapp/WEB-INF/views/board/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/board/modify.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/board/read.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/board/write.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/include/footer.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/left_navi.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/plugin_js.jsp=UTF-8
