레프트 네비 수정!

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/include/charts.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/footer.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/left_navi.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/include/plugin_js.jsp=UTF-8
